[metadata]
name = pstyle
version = attr: pstyle.version.VERSION
url = https://github.com/wtnb75/pstyle
author = Watanabe Takashi
author_email = wtnb75@gmail.com
license = MIT
license_file = LICENSE
description = python DB-API paramstyle converter
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Topic :: Documentation
  Programming Language :: Python :: 3

[options]
zip_safe = True
packages = find:

[options.entry_points]
console_scripts =
  pstyle=pstyle.main:cli
